[Mitaka-13.1] UG-547 Verify Neutron Ports
Adds pre-upgrade task to output DHCP Neutron ports. Also adds post
upgrade task to verify neutron ports are not in the build state.

Created on Mitaka-13.1 branch, will port to other branches after
merged.

--- a/rpcd/playbooks/roles/rpc_pre_upgrade/templates/status.txt.j2
+++ b/rpcd/playbooks/roles/rpc_pre_upgrade/templates/status.txt.j2
@@ -32,6 +32,10 @@ neutron agent-list output as at {{ ansible_date_time.date }}-{{ ansible_date_tim
 {{ line }}
 {% endfor %}
 
+neutron DHCP port list as at {{ ansible_date_time.date }}-{{ ansible_date_time.time }}
+{% for line in neutron_port_result.stdout_lines %}
+{{ line }}
+{% endfor %}
 
 openstack endpoint list output as at {{ ansible_date_time.date }}-{{ ansible_date_time.time }}
 Compare output to external_lb_vip_address: {{ external_lb_vip_address }}
